# mars-patcher

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  compress.py  item_patcher.py  locations.py  main.py  palette.py  pull-assembly-patches.py  pyproject.toml  random_palettes.py  room_entry.py  schema.json  settings.py  setup.cfg  test_items.json  tileset.py  todo.md
.github/: dependabot.yml
.github/workflows/: python.yml
data/: locations.json
src/mars_patcher/: __main__.py  auto_generated_types.py  cli.py  color_spaces.py  compress.py  connections.py  credits.py  door_locks.py  hints.py  item_patcher.py  level_edits.py  locations.py  minimap.py  misc_patches.py  navigation_text.py  palette.py  patcher.py  patching.py  random_enemies.py  random_palettes.py  rom.py  room_entry.py  room_names.py  starting.py  text.py  tileset.py
src/mars_patcher/__pyinstaller/: __init__.py
src/mars_patcher/constants/: credits_lines.py  enemies.py  game_data.py  items.py  main_hub_numbers.py  minimap_tiles.py  palettes.py  reserved_space.py
src/mars_patcher/data/: char_map_mf.json  enemy_groups.json  schema.json
src/mars_patcher/data/patches/mf_u/: anti_softlock.ips  bombless_pbs.ips  free_space.txt  stereo_default.ips  unhidden_map.ips
src/mars_patcher/data/patches/mf_u/asm/: .gitignore
src/mfr_patcher/: __main__.py  cli.py  color_spaces.py  compress.py  data.py  hints.py  item_patcher.py  locations.py  palette.py  patcher.py  random_enemies.py  random_palettes.py  rom.py  room_entry.py  test_patch_data.json  text.py  tileset.py
src/mfr_patcher/__pyinstaller/: hook-mfr_patcher.py
src/mfr_patcher/data/: enemy_types.json  schema.json
