[build-system]
requires = ["setuptools>=62.3"]
build-backend = "setuptools.build_meta"

[project]
name = "mars_patcher"
version = "0.0.1"
authors = [
    {name = "biospark"},
]
description = "An open source randomizer patcher for Metroid Fusion."
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3.9"

]
dependencies = [
    "jsonschema",
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov",
    "pytest-mock",
]
typing = [
    "mypy",
    "pre-commit"
]

[project.urls]
Repository = "https://github.com/biosp4rk/mars-patcher"

# Entry Points for PyInstaller
[project.entry-points."pyinstaller40"]
hook-dirs = "mars_patcher.__pyinstaller:get_hook_dirs"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
namespaces = false

[tool.setuptools.package-data]
"*" = ["data/**"]
"mars_patcher.data" = ["**"]

[tool.ruff]
line-length = 100
lint.select = ["E", "F", "W", "I", "TC", "UP"]
src = ["src"]

[tool.mypy]
files = [
    "src/mars_patcher/"
]
follow_imports = "silent"
disallow_untyped_defs = true
warn_return_any = true
warn_unreachable = true