[metadata]
name = mfr_patcher
version = 0.0.1
description = An open source randomizer for Metroid Fusion.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/biosp4rk/mfr_patcher
author = Biospark
license_files =
    LICENSE

classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Development Status :: 3 - Alpha
    Programming Language :: Python :: 3.11

[options]
zip_safe = False
packages = find_namespace:
package_dir =
    = src
include_package_data = True
python_requires = >=3.11
install_requires =
    jsonschema

[options.package_data]
* = data/**
mfr_patcher.data= **

[options.packages.find]
where = src

[options.extras_require]
test =
    pytest
    pytest-cov
    pytest-mock


#
# Entry Points for PyInstaller
# ---------------------------------
[options.entry_points]
pyinstaller40 =
    # .. _hook_registration:
    #
    # **Hook registration**: This entry point refers to a function
    # that will be invoked with no parameters. It must return a
    # sequence of strings, each element of which provides an
    # additional absolute path to search for hooks. This is equivalent
    # to passing the ``additional-hooks-dir`` `command-line option
    # <https://pyinstaller.readthedocs.io/en/stable/usage.html#what-to-bundle-where-to-search>`_
    # to PyInstaller for each string in the sequence.
    #
    # In this project, the function is ``get_hook_dirs``.
    hook-dirs = mfr_patcher.__pyinstaller:get_hook_dirs
